tests/snapshots/options__opt_cycle_header_lines@001.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\", \"d\"]\noptions: --cycle --header-lines 1"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"  d                                                                             "
"  c                                                                             "
"> b                                                                             "
"  a                                                                             "
"  3/3                                                                        0/0"
">                                                                               "
cursor: (24, 3)
