tests/snapshots/options__opt_cycle_header_lines@002.snap
---
source: tests/options.rs
description: "input: items [\"a\", \"b\", \"c\", \"d\"]\noptions: --cycle --header-lines 1\nafter:\n  @key Down"
---
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"> d                                                                             "
"  c                                                                             "
"  b                                                                             "
"  a                                                                             "
"  3/3                                                                        2/0"
">                                                                               "
cursor: (24, 3)
